--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,18 @@
     box-sizing: border-box;
 }
 
+/* General Styles */
+
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+
+    /* General project styles */
+
+    color: #3a3a3a;
+}
+
 /* Header */
 
 header {
@@ -16,6 +28,9 @@ header {
 
 main {
     background-color: lightblue;
+
+    /* Make main element take up any surplus space to push footer to the bottom */
+    flex: 1 0 auto;
 }
 
 /* Footer */
