--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+/*
+    For reference 'Oswald is for Headings and Raleway for General Text
+    font-family: 'Oswald', sans-serif; 
+    font-family: 'Raleway', sans-serif;
+*/
+
 /* Overriding browser defaults */
 
 * {
@@ -16,6 +22,10 @@ body {
     /* General project styles */
 
     color: #3a3a3a;
+
+    /* base font families */
+    font-family: 'Raleway', sans-serif;
+
 }
 
 /* Header */
