--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,12 @@ h1 {
 /* Header */
 
 header {
-    background-color: red;
+    background-color: #fff;
+    width: 100%;
+    padding: 0 1rem;
+    position: fixed;
+    z-index: 99;
+    box-shadow: 0 2px 5px #3a3a3a;
 }
 
 /* Main */
