--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ header {
     padding: 0 1rem;
     position: fixed;
     z-index: 99;
-    box-shadow: 0 2px 5px #3a3a3a;
+    box-shadow: 0 2px 2px #3a3a3a;
 }
 
 #menu {
@@ -62,6 +62,18 @@ header {
 
 .active {
     border-bottom: 1px solid #3a3a3a;
+}
+
+/* Navbar styles with dropdown toggle*/
+
+nav {
+    position: absolute;
+    background-color: #fff;
+    width: 100%;
+    left: 0;
+    padding: 0 1rem;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: none;
 }
 
 /* Main */
