--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,9 @@ header {
     position: fixed;
     z-index: 99;
     box-shadow: 0 2px 2px #3a3a3a;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
 }
 
 #menu {
@@ -74,6 +77,21 @@ nav {
     padding: 0 1rem;
     box-shadow: 0 2px 2px #3a3a3a;
     display: none;
+    top: 100%;
+}
+
+/* Nav Toggle */
+
+#nav-toggle:checked~nav{
+    display: block;
+}
+
+#nav-toggle {
+    display: none;
+}
+
+.nav-toggle-label {
+    font-size: 2rem;
 }
 
 /* Main */
