added cover text and styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,12 +27,7 @@ body {
     font-family: 'Raleway', sans-serif;
 }
 
-header a {
-    text-decoration: none;
-    color: inherit;
-}
-
-h1 {
+h1, h2, h3 {
     font-family: 'Oswald', sans-serif; 
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -51,6 +46,11 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+}
+
+header a {
+    text-decoration: none;
+    color: inherit;
 }
 
 #menu {
@@ -108,6 +108,22 @@ main {
     height: 600px;
     width: 100%;
     background: url("../images/hero-image.webp") no-repeat center center/cover;
+    position: relative;
+}
+
+#cover-text {
+    background-color: rgba(241, 109, 107,0.7);
+    font-size: 130%;
+    position: absolute;
+    bottom: 30px;
+    width: 80%;
+    min-height: 200px;
+    padding-top: 40px;
+    padding-left: 10px;
+}
+
+#cover-text > h2, #cover-text > h3 {
+    color: #fff;
 }
 
 /* Footer */
@@ -160,6 +176,11 @@ main {
 
     main {
         margin-top: 79px;
+    }
+
+    #cover-text {
+        width: 300px;
+        right: 50px;
     }
 
 }
