--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,33 @@ main {
     color: #fff;
 }
 
+/* Reasons Section */
+
+#reasons {
+    width: 90%;
+    margin: 20px auto;
+}
+
+#reasons h2 {
+    font-size: 280%;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+#reasons div {
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+
+#reasons hr {
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
+}
+
+#reasons p {
+    padding: 0 20px;
+}
+
 /* Footer */
 
 #social-networks {
