--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,47 +1,37 @@
-/*
-    For reference 'Oswald is for Headings and Raleway for General Text
-    font-family: 'Oswald', sans-serif; 
-    font-family: 'Raleway', sans-serif;
-*/
+/* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
 
-/* Overriding browser defaults */
-
+/* Asterisk wildcard selector to override default styles added by the browser */
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-/* General Styles */
-
+/* General styles */
 body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-
-    /* General project styles */
-
+    /* Generic project styles */
     color: #3a3a3a;
-
-    /* base font families */
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 h1, h2, h3 {
-    font-family: 'Oswald', sans-serif; 
+    font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #252525;
 }
 
 /* Header */
-
 header {
-    background-color: #fff;
-    width: 100%;
+    background-color: #ffffff;
     padding: 0 1rem;
     position: fixed;
     z-index: 99;
+    width: 100%;
     box-shadow: 0 2px 2px #3a3a3a;
     display: flex;
     justify-content: space-between;
@@ -67,11 +57,10 @@ header a {
     border-bottom: 1px solid #3a3a3a;
 }
 
-/* Navbar styles with dropdown toggle*/
-
+/* Navbar styles with dropdown toggle */
 nav {
     position: absolute;
-    background-color: #fff;
+    background-color: #ffffff;
     width: 100%;
     left: 0;
     padding: 0 1rem;
@@ -80,9 +69,8 @@ nav {
     top: 100%;
 }
 
-/* Nav Toggle */
-
-#nav-toggle:checked~nav{
+/* Nav toggle */
+#nav-toggle:checked~nav {
     display: block;
 }
 
@@ -94,16 +82,14 @@ nav {
     font-size: 2rem;
 }
 
-/* Main */
-
+/* Main content */
 main {
-    /* Make main element take up any surplus space to push footer to the bottom */
+    /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
 }
 
-/* Hero section*/
-
+/* Hero section */
 #hero {
     height: 600px;
     width: 100%;
@@ -112,7 +98,8 @@ main {
 }
 
 #cover-text {
-    background-color: rgba(241, 109, 107,0.7);
+    /* Final rgba value sets the opacity so it is semi-transparent */
+    background-color: rgba(241, 109, 107, .7);
     font-size: 130%;
     position: absolute;
     bottom: 30px;
@@ -123,44 +110,43 @@ main {
 }
 
 #cover-text > h2, #cover-text > h3 {
-    color: #fff;
+    color: #ffffff;
 }
 
-/* Reasons Section */
-
+/* Reasons section */
 #reasons {
     width: 90%;
     margin: 20px auto;
 }
 
 #reasons h2 {
-    font-size: 280%;
-    text-align: center;
     margin-bottom: 20px;
+    text-align: center;
+    font-size: 280%;
 }
 
-#reasons div {
+#benefits-physical > div,
+#benefits-mental > div {
     line-height: 20px;
     margin-bottom: 20px;
 }
 
-#reasons hr {
+#benefits p {
+    padding: 0 20px;
+}
+
+#benefits hr {
     border-top: 1px solid #3a3a3a;
     margin: 5px 0;
 }
 
-#reasons p {
-    padding: 0 20px;
-}
-
 /* Footer */
-
 #social-networks {
     text-align: center;
     padding: 20px 0;
     display: flex;
     justify-content: space-evenly;
-    list-style: none;
+    list-style-type: none;
 }
 
 #social-networks i {
@@ -169,9 +155,8 @@ main {
     color: #3a3a3a;
 }
 
-/* Media query: tablet and larger (768px+) */
-
-@media screen and (min-width: 768px){
+/* Media query: tablets and larger (768px and up) */
+@media screen and (min-width: 768px) {
     /* Header */
     nav {
         display: block;
@@ -199,23 +184,22 @@ main {
         margin: 0 0.5rem;
     }
 
-    /* Main Content */
-
+    /* Main content */
     main {
+        /* Push main content down to accommodate larger header */
         margin-top: 79px;
     }
 
+    /* Hero */
     #cover-text {
         width: 300px;
         right: 50px;
     }
-
 }
 
-@media  screen and (min-width: 992px) {
-
-    #menu a:hover {
+/* Large devices (laptops and desktops, 992px and up) */
+@media screen and (min-width: 992px) {
+    #menu a:hover{
         border-bottom: 1px solid #3a3a3a;
     }
-    
 }
