--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,11 +206,30 @@ main {
         margin-top: 79px;
     }
 
-    /* Hero */
+    /* Hero Section */
     #cover-text {
         width: 300px;
         right: 50px;
     }
+
+    /* Reasons Section */
+    #benefits-physical,
+    #benefits-mental {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    #benefits-physical > div,
+    #benefits-mental > div {
+        width: 75%;
+    }
+
+    #benefits-mental > div {
+        text-align: end;
+        align-self: flex-end;
+    }
+
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
@@ -218,4 +237,33 @@ main {
     #menu a:hover{
         border-bottom: 1px solid #3a3a3a;
     }
+}
+
+/*Largest devices (screens that are 1200px and up)*/
+@media screen and (min-width: 1200px) {
+    
+    #benefits {
+        display:flex;
+        flex-direction: row;
+    }
+
+    #benefits-physical > div,
+    #benefits-mental > div {
+        flex-grow: 1;
+        flex-shrink: 1;
+    }
+    
+    #benefits-physical {
+        order: 1;
+    }
+
+    #benefits-mental {
+        order:3;
+    }
+
+    #benefits-image {
+        order: 2;
+    }
+
+
 }
