added background image and flex layout to meetups styling section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,6 +156,15 @@ main {
     justify-content: center;
 }
 
+
+/* Meet-up Times Section*/
+
+#times {
+    background: url(../images/dublin-city.webp) no-repeat center/cover;
+    display: flex;
+    flex-wrap: wrap;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
