--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,6 +165,20 @@ main {
     flex-wrap: wrap;
 }
 
+#times div {
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 15px;
+    text-align: center;
+    flex-basis: 200px;
+    flex-grow: 1;
+    border: 2px solid #fff;
+}
+
+#times h3 {
+    color: #f3f3f3;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
