--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,6 +210,17 @@ main {
     color: #3a3a3a;
 }
 
+/* Media query: large or landscape phones (576px +) */
+
+@media screen and (min-width: 576px) {
+
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+
+}
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
     /* Header */
@@ -269,6 +280,10 @@ main {
         align-self: flex-end;
     }
 
+    #photos {
+        column-count: 3;
+    }
+
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
@@ -303,7 +318,9 @@ main {
     #benefits-image {
         order: 2;
     }
-
+    #photos {
+        column-count: 4;
+    }
 
 }
 
