--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,6 +91,8 @@ main {
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Hero section */
@@ -197,15 +199,16 @@ main {
 /* Signup Page */
 
 #signup {
-    background-image: url("assets/images/signup-image.webp");
+    background-image: url("../images/signup-image.webp");
     background-size: cover;
     background-position: 75%;
+    padding: 20px 10% 0 10%;
     flex-grow: 1;
-    padding: 20px 10%;
 }
 
 #signup h2{
     color: #fafafa;
+    margin-bottom: 20px;
 }
 
 #signup-form {
@@ -214,7 +217,31 @@ main {
     background-color: rgba(60, 60, 60, 0.6);
 }
 
+.text-input {
+    background: transparent;
+    border: 1px solid #fafafa;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border-radius: 2px;
+    padding: 0 5px;
+}
 
+#radio-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.join-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px;
+    font-size: 100%;
+    background-color: #454b1b;
+    color: #fafafa;
+}
 /* Footer */
 #social-networks {
     text-align: center;
@@ -300,8 +327,33 @@ main {
         align-self: flex-end;
     }
 
+    /*Gallery Section*/
+    
     #photos {
         column-count: 3;
+    }
+
+    /* Form Section */
+
+    #sign-up {
+        background-position: right center;
+        position: relative;
+    }
+
+    #signup-form {
+        max-width: 400px;
+        position: absolute;
+        left: 10%;
+        top: 150px;
+    }
+
+    .text-input:hover {
+        border-color: #f16c6b;
+    }
+
+    .join-button:hover {
+        background-color: #fafafa;
+        color: #454b1b;
     }
 
 }
