--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,7 @@ nav {
     box-shadow: 0 2px 2px #3a3a3a;
     display: none;
     top: 100%;
+    z-index: 99;
 }
 
 /* Nav toggle */
@@ -101,11 +102,13 @@ main {
     width: 100%;
     background: url("../images/hero-image.webp") no-repeat center center/cover;
     position: relative;
+    overflow: hidden;
+    perspective: 100px;
 }
 
 #cover-text {
     /* Final rgba value sets the opacity so it is semi-transparent */
-    background-color: rgba(241, 109, 107, .7);
+    background-color: rgba(0, 0, 0, .6);
     font-size: 130%;
     position: absolute;
     bottom: 30px;
@@ -117,6 +120,22 @@ main {
 
 #cover-text > h2, #cover-text > h3 {
     color: #ffffff;
+}
+
+#signup-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px;
+    font-size: 100%;
+    background-color: #3a3a3a;
+    margin-bottom: 2em;
+}
+
+#signup-button a {
+    color: #fafafa;
+    font-family: 'Oswald', sans-serif;
+    font-size: 130%;
+    text-decoration: none;
 }
 
 /* Reasons section */
